# mcp-authx

./: .gitignore  README.md  demo_server.py  example_usage.py  pyproject.toml
src/: __init__.py  middleware.py  oauth.py  policy.py
